A9 lidando com erros na requisicao

--- a/css/index.css
+++ b/css/index.css
@@ -137,7 +137,7 @@ button[disabled=disabled], button:disabled {
     background-color: lightcoral;
 }
 
-#mensagens-erro{
+#mensagens-erro, #erro-ajax{
     color: red;
 }
 
